# 3DMolMS

./: .gitignore  CHANGE_LOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test_publish.yml
docs/: ENCODER.md  GEN_REFER_LIB.md  MSMS_PRED.md  PRETRAIN.md  PROP_PRED.md  PROP_USAGE.md
docs/source/: conf.py  encoder.md  index.rst  molnetpack.rst  molnetpack_training.rst  supported_formats.rst
docs/source/advanced_usage/: generate_library.rst  pretrain.rst
docs/source/usage/: ccs_prediction.rst  ccs_training.rst  finetuning.rst  index.rst  msms_prediction.rst  msms_training.rst  rt_prediction.rst  rt_training.rst
examples/: output_msms.mgf  output_rt.csv  pred_ccs.py  pred_msms.py  pred_rt.py  save_features.py  train_msms.py
molnetpack/: __init__.py  dataset.py  model.py  molconv.py  molnet.py  utils.py
molnetpack/config/: molnet.yml  molnet_ccs.yml  molnet_ccs_tl.yml  molnet_pre.yml  molnet_pre_ssl.yml  molnet_rt.yml  molnet_rt_tl.yml  preprocess_mmff.yml
molnetpack/data_utils/: all2pkl.py  utils.py
scripts/: chembl2pkl.py  eval.py  predict.py  preprocess.py  pretrain_ssl.py  train.py  utils.py
test/: output_ccs.csv  output_msms.csv  pred_ccs.py  pred_msms.py  pred_rt.py  save_features.py
tests/: test_encoder_invariance.py  test_se3_invariance.py  test_ssl_pretrain.py
